# rust-stock

./: .gitignore  CHANGELOG.md  NOTICE  README.md  vip.md
.github/workflows/: ci.yml
rust-stock/docs/: DEVELOPMENT.md
rust-stock/src/: band.html  index.html  main.js
rust-stock/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
rust-stock/src-tauri/capabilities/: default.json
rust-stock/src-tauri/src/: ai.rs  extra.rs  feed.rs  kline.rs  lib.rs
rust-stock/src-tauri/src/sources/: eastmoney.rs  mod.rs
rust-stock/src/js/: alarm.js  api.js  band.js  bridge.js  sentiment.js  store.js  tradingcal.js  ui.js
rust-stock/src/js/pages/: chat.js  kline.js  market.js  news.js  recommend.js  settings.js  watch.js
