[package]
name = "rust-stock"
version = "0.1.0"
description = "rust-stock — 可吸附边缘的悬浮行情助手"
edition = "2021"

[lib]
name = "rust_stock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 行情抓取 + AI 流式（stream feature 用于 DeepSeek SSE）
# rustls-tls：纯 Rust TLS，不依赖系统 openssl（安卓交叉编译 openssl-sys 会失败）
reqwest = { version = "0.12", default-features = false, features = ["gzip", "stream", "rustls-tls", "http2", "charset"] }
encoding_rs = "0.8"   # 新浪 GBK 转 UTF-8
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3"  # 流式响应 bytes_stream
async-trait = "0.1"   # QuoteSource trait 的 dyn 动态分发
# 本地存储（bundled 自带 SQLite，免装系统库）
rusqlite = { version = "0.32", features = ["bundled"] }

# 桌面专属插件（Android/iOS 不支持开机自启动）
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[features]
default = ["net"]
net = []

# 发布包体积优化（安卓/桌面通用）：剥符号 + LTO + 体积优先
[profile.release]
strip = true        # 剥离调试符号（APK/exe 显著变小）
lto = true          # 链接期优化
opt-level = "s"     # 偏向体积而非极致速度
codegen-units = 1   # 更激进的跨模块优化
panic = "abort"     # 去掉展开表，再省一点
